[gd_scene load_steps=3 format=2]

[ext_resource path="res://Plane.tscn" type="PackedScene" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]

[node name="World" type="Node"]
script = ExtResource( 2 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="GUI"]
margin_left = 276.885
margin_top = 12.6436
margin_right = 319.885
margin_bottom = 26.6436
text = "Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plane" parent="." instance=ExtResource( 1 )]

[node name="MissileSpawner" type="Node2D" parent="."]

[node name="missile1" type="Position2D" parent="MissileSpawner"]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
